--- a/.project
+++ b/.project
@@ -7,6 +7,7 @@
 		<project>inet4</project>
 		<project>ndp</project>
 		<project>os3</project>
+		<project>raqsac</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
