--- a/simulations/ManhattanStatic/omnetpp.ini
+++ b/simulations/ManhattanStatic/omnetpp.ini
@@ -110,12 +110,12 @@ description = "NDP"
 **.arrivalRate = 1000
 **.shuffle = true
 #**.flowSize = 25000
-**.flowSize = 25000
+**.flowSize = ${initialWindow}*12
 **.numShortFlows = 100
 **.longFlowSize = 10000
 **.percentLongFlowNodes = 0
-**.initialWindow = 2500
-**.IW = 2500
+**.initialWindow = ${initialWindow=12..15000 step 12}
+**.IW = ${initialWindow}
 #**.initialWindow = 2500
 #**.IW = 2500
 **.switchQueueLength = 32
