--- a/simulations/ManhattanStatic/omnetpp.ini
+++ b/simulations/ManhattanStatic/omnetpp.ini
@@ -3,9 +3,31 @@
 ##the final year project by Aiden Valentine.
 [General]
 network = ManhattanStatic
-
 record-eventlog=false
+#FatTreeNdp.Pod[3].racks[1].servers[0].app[2].module-eventlog-recording = true
+**.module-eventlog-recording = false
+debug-on-errors = false
+cmdenv-express-mode = false
+cmdenv-log-prefix = %t | %m |
 cmdenv-event-banners = false
+#FatTreeNdp.Pod[2].racks[1].servers[1].ndp.cmdenv-log-level = trace
+#FatTreeNdp.Pod[3].racks[1].servers[0].ndp.conn-136.cmdenv-log-level = info
+#FatTreeNdp.Pod[3].racks[1].servers[0].app[2].cmdenv-log-level = info
+
+#FatTreeNdp.Pod[2].racks[1].servers[1].ndp.conn-137.cmdenv-log-level = info
+#FatTreeNdp.Pod[2].racks[1].servers[1].app[0].cmdenv-log-level = info
+
+**.satellite[295].groundStation[0].ndp.conn-10278.cmdenv-log-level = off#info
+**.satellite[295].groundStation[0].app[0].cmdenv-log-level = off#info
+**.cmdenv-log-level = off
+cmdenv-redirect-output = false
+cmdenv-output-file = senderLog.txt
+#cmdenv-express-mode = true
+cmdenv-performance-display = true
+#*.visualizer.displayRoutingTables = true
+**.statistic-recording=true
+
+
 **.app[*].packetReceived:vector(packetBytes).vector-recording = true
 **.app[*].packetReceived:sum(packetBytes).scalar-recording = true
 **.app[*].packetReceived:count.scalar-recording = true
@@ -18,8 +40,8 @@ cmdenv-event-banners = false
 **.app[*].instThroughputNDP:vector.vector-recording = true
 **.app[*].numRcvTrimmedHeaderSigNdp:last.scalar-recording = true 
 **.app[*].fctRecordv3:last.scalar-recording = true
-**.scalar-recording=true
-**.vector-recording=true
+**.scalar-recording=false
+**.vector-recording=false
 **.bin-recording=false
 **.MCC[*].mobility.typename = "GroundStationMobility"
 ## Routing settings
@@ -27,6 +49,7 @@ cmdenv-event-banners = false
 ##**.partition-id = 
 **.netmaskRoutes = ""
 #
+
 #*.configurator.config = xml("<config><interface hosts='**' address='10.x.x.x' netmask='255.x.x.x'/><autoroute metric='propagationDelay'/></config>") #<autoroute metric='errorRate'/>
 *.configurator.addStaticRoutes = true
 *.configurator.optimizeRoutes = false
@@ -101,21 +124,22 @@ description = "NDP"
 **.satellite[*].groundStation[*].ppp[*].ppp.queue.packetCapacity = -1 
 
 **.ppp[*].ppp.queue.typename = "NdpSwitchQueue" # in routers DropTailQueue NDPQueue
-**.ppp[*].ppp.queue.packetCapacity = 80000 #${30..30 step 1}  # in routers
+**.ppp[*].ppp.queue.packetCapacity = 750 #${30..30 step 1}  # in routers
 
 # Network parameters
-**.numOfSats =100#1600#1207         # Number of satellites used in simulation. ATTENTION! Must be smaller or equal to number of satellites in choosen TLEfile
+**.numOfSats =1024#1600#1207         # Number of satellites used in simulation. ATTENTION! Must be smaller or equal to number of satellites in choosen TLEfile
 **.numOfGS = 2
-**.trafficMatrixType = ${"permTM"}  #randTM permTM
+**.trafficMatrixType = ${"randTM"}  #randTM permTM
 **.arrivalRate = 1000
 **.shuffle = true
 #**.flowSize = 25000
-**.flowSize = ${initialWindow}*12
-**.numShortFlows = 100
+**.flowSize = ${initialWindow}*10
+**.numShortFlows = 50
 **.longFlowSize = 10000
 **.percentLongFlowNodes = 0
 **.initialWindow = ${initialWindow=12..15000 step 12}
 **.IW = ${initialWindow}
+**.numOfHops = 10
 #**.initialWindow = 2500
 #**.IW = 2500
 **.switchQueueLength = 32
@@ -149,7 +173,6 @@ description = "RaQSaC"
 **.satellite[*].switch.ppp[*].ppp.queue.typename = "RaqsacSwitchQueue" # in routers DropTailQueue NDPQueue
 **.satellite[*].switch.ppp[*].ppp.queue.packetCapacity = 800 #${30..30 step 1}  # in routers
 
-
 # Network parameters
 **.numOfSats =25#1600#1207         # Number of satellites used in simulation. ATTENTION! Must be smaller or equal to number of satellites in choosen TLEfile
 **.trafficMatrixType = ${"randTM"}  #randTM permTM
@@ -158,7 +181,7 @@ description = "RaQSaC"
 **.flowSize = 120
 **.numShortFlows = 10
 **.longFlowSize = 10000
-**.percentLongFlowNodes = 0
+**.percentLongFlowNodes = 0.4
 **.initialWindow = 5
 **.IW = 5
 **.switchQueueLength = 8
