--- a/simulations/ManhattanStatic/hopTest.ini
+++ b/simulations/ManhattanStatic/hopTest.ini
@@ -47,9 +47,9 @@ cmdenv-event-banners = false
 description = "NDP"
 **.ndp.typename = "Ndp"
 **.ndp.ndpAlgorithmClass = "DumbNdp"
-**.satellite[265].groundStation[1].numApps =1
+#**.satellite[265].groundStation[1].numApps =1
 
-**.satellite[295].groundStation[0].numApps =1
+#**.satellite[295].groundStation[0].numApps =1
 
 
 #**.app[0].typename = "NdpBasicClientApp"
