--- a/simulations/ManhattanStatic/omnetpp.ini
+++ b/simulations/ManhattanStatic/omnetpp.ini
@@ -39,6 +39,7 @@ cmdenv-performance-display = true
 **.app[*].instThroughputNDP:mean.scalar-recording = true
 **.app[*].instThroughputNDP:vector.vector-recording = true
 **.app[*].numRcvTrimmedHeaderSigNdp:last.scalar-recording = true 
+**.cwnd:vector.vector-recording = true
 **.app[*].fctRecordv3:last.scalar-recording = true
 **.scalar-recording=false
 **.vector-recording=false
@@ -120,29 +121,29 @@ description = "NDP"
 **.ndp.ndpAlgorithmClass = "DumbNdp"
 
 # NIC configuration - queue (see DropTailQueue.ned @statistic[dropPk] .... )
-**.satellite[*].groundStation[*].ppp[*].ppp.queue.typename = "PacketQueue" # in routers DropTailQueue NDPQueue
-**.satellite[*].groundStation[*].ppp[*].ppp.queue.packetCapacity = -1 
+#**.satellite[*].groundStation[*].ppp[*].ppp.queue.typename = "PacketQueue" # in routers DropTailQueue NDPQueue
+#**.satellite[*].groundStation[*].ppp[*].ppp.queue.packetCapacity = -1 
 
 **.ppp[*].ppp.queue.typename = "NdpSwitchQueue" # in routers DropTailQueue NDPQueue
-**.ppp[*].ppp.queue.packetCapacity = 750 #${30..30 step 1}  # in routers
+**.ppp[*].ppp.queue.packetCapacity = 50 #${30..30 step 1}  # in routers
 
 # Network parameters
-**.numOfSats =1024#1600#1207         # Number of satellites used in simulation. ATTENTION! Must be smaller or equal to number of satellites in choosen TLEfile
+**.numOfSats =900#1600#1207         # Number of satellites used in simulation. ATTENTION! Must be smaller or equal to number of satellites in choosen TLEfile
 **.numOfGS = 2
 **.trafficMatrixType = ${"randTM"}  #randTM permTM
 **.arrivalRate = 1000
 **.shuffle = true
 #**.flowSize = 25000
-**.flowSize = ${initialWindow}*10
+**.flowSize = 20000
 **.numShortFlows = 50
 **.longFlowSize = 10000
 **.percentLongFlowNodes = 0
-**.initialWindow = ${initialWindow=12..15000 step 12}
+**.initialWindow = ${initialWindow=0..5000 step 1}
 **.IW = ${initialWindow}
-**.numOfHops = 10
+**.numOfHops = 0
 #**.initialWindow = 2500
 #**.IW = 2500
-**.switchQueueLength = 32
+**.switchQueueLength = 50
 **.isWebSearchWorkLoad = false 
 **.perPacketEcmp = true
 **.perFlowEcmp = false
@@ -155,6 +156,55 @@ description = "NDP"
 **.receiverAppType = "SinkApp"
 
 [Config Experiment3]
+description = "RDP"
+**.satellite[*].groundStation[*].numApps =1
+#**.app[0].typename = "NdpBasicClientApp"
+**.satellite[*].groundStation[*].app[0].typename = "RdpBasicClientApp"
+**.satellite[*].groundStation[*].app[0].connectAddress = "satellite[*].groundStation"  #make sure intial values are correct
+**.satellite[*].groundStation[*].app[0].connectPort = 80
+**.satellite[*].groundStation[*].app[0].startTime =50s
+**.satellite[*].groundStation[*].app[0].numPacketsToSend = 50
+**.rdp.typename = "Rdp"
+**.rdp.rdpAlgorithmClass = "DumbRdp"
+
+# NIC configuration - queue (see DropTailQueue.ned @statistic[dropPk] .... )
+#**.satellite[*].groundStation[*].ppp[*].ppp.queue.typename = "PacketQueue" # in routers DropTailQueue NDPQueue
+#**.satellite[*].groundStation[*].ppp[*].ppp.queue.packetCapacity = -1 
+
+**.ppp[*].ppp.queue.typename = "RdpSwitchQueue" # in routers DropTailQueue NDPQueue
+**.ppp[*].ppp.queue.packetCapacity = 350 #${30..30 step 1}  # in routers
+
+# Network parameters
+**.numOfSats =900#1600#1207         # Number of satellites used in simulation. ATTENTION! Must be smaller or equal to number of satellites in choosen TLEfile
+**.numOfGS = 2
+**.trafficMatrixType = ${"randTM"}  #randTM permTM
+**.arrivalRate = 1000
+**.shuffle = true
+#**.flowSize = 25000
+**.flowSize = 60000
+**.numShortFlows = 50
+**.longFlowSize = 10000
+**.percentLongFlowNodes = 0
+**.initialWindow = ${initialWindow=0..5000 step 1}
+**.IW = ${initialWindow}
+**.numOfHops = 5
+**.ssthresh = 0000
+**.additiveIncreasePackets = 25
+#**.initialWindow = 2500
+#**.IW = 2500
+**.switchQueueLength = 50
+**.isWebSearchWorkLoad = false 
+**.perPacketEcmp = true
+**.perFlowEcmp = false
+**.seedValue = 2222
+**.randomGroup= true
+**.numOfNodes = numOfSats
+
+**.transportProtocol = "rdp"
+**.clientAppType = "BasicClientApp"
+**.receiverAppType = "SinkApp"
+
+[Config Experiment4]
 description = "RaQSaC"
 **.satellite[*].groundStation.numApps =1
 #**.app[0].typename = "NdpBasicClientApp"
